chore(release): v0.3.0